tests/ui/rfcs/rfc-1717-dllimport/missing-link-attr.rs
//@ compile-flags: -l foo:bar

#![crate_type = "lib"]

//~? ERROR renaming of the library `foo` was specified
